--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,4 +6,7 @@ phases:
     on-failure: ABORT |
     commands:
       - docker build -t 032401129069.dkr.ecr.ca-central-1.amazonaws.com/jhub-open-userimage:latest .
+      - echo "build completed" && echo "authenticating to the ECR repo"
       - aws ecr get-login-password --profile saml --region ca-central-1 | docker login --username AWS --password-stdin 032401129069.dkr.ecr.ca-central-1.amazonaws.com
+      - echo "authenticating to ECR repo successful. Pushing image to the repo"
+      - docker push 032401129069.dkr.ecr.ca-central-1.amazonaws.com/jhub-open-userimage:latest
