--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,6 @@
 version: 0.2
 phases:
-  prebuild:
+  pre_build:
     commands:
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
